welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: Boolean does not take parameters
if(isBirthday() == "true") return 0;
             ^caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
if(vit > 81 ) return 2;
^